# memGPT

./: .env.example  .gitignore  2026-05-XX-MemGPT.ipynb  CLAUDE.md  MemGPT-Towards-LLMs-as-Operating-Systems.md  README.md  charla-memgpt.pptx  docker-compose.yml  memGPT-plan.md  memGPT-resumen.md  pyproject.toml
runs/: dmr_baseline_4o_mini.json  dmr_baseline_deepseek-v4-flash.json  dmr_baseline_gpt4o_mini.json  dmr_memgpt_4o_mini.json  dmr_memgpt_deepseek-v4-flash.json  dmr_memgpt_gpt4o_mini.json  doc_qa_baseline_deepseek-v4-flash.json  doc_qa_baseline_gpt4o_mini.json  doc_qa_memgpt_deepseek-v4-flash.json  doc_qa_memgpt_gpt4o_mini.json  doc_qa_smoke_baseline-gpt4o-mini.json  doc_qa_smoke_memgpt-gpt4o-mini.json  doc_qa_smoke_memgpt-graphiti-gpt4o-mini.json  nested-kv-baseline-deepseek-v4-flash.json  nested-kv-baseline-gpt4o-mini.json  nested-kv-baseline-haiku-4-5.json  nested-kv-memgpt-deepseek-v4-flash.json  nested-kv-memgpt-gpt4o-mini.json  nested-kv-memgpt-haiku-4-5.json
scripts/: build_deck.py  chat.py  check_llm.py  check_services.py  inspect_web.py  plot_metrics.py  plot_nested_kv.py  run_dmr.py  run_document_qa.py  run_nested_kv.py
tests/: test_agent_e2e.py  test_agent_structure.py  test_core_memory.py  test_core_memory_tools.py  test_deepseek.py  test_dmr.py  test_document_qa.py  test_embedders.py  test_events.py  test_heartbeat.py  test_memfs_store.py  test_memfs_tools.py  test_memory_store.py  test_nested_kv.py  test_phase3_flush.py  test_phase4_recall_sync.py  test_phase5_chaining.py  test_phase6_events.py  test_phase7_persistence.py  test_queue_manager.py  (+4 more)
(+25 files in other folders)
