[project]
name = "memgpt"
version = "0.1.0"
description = "MemGPT implementation from scratch (arXiv:2310.08560)"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.2",
    "langgraph-checkpoint-postgres>=2.0",
    "langchain>=1.0",
    "langchain-core>=1.0",
    "langchain-anthropic>=0.3",
    "langchain-openai>=0.2",
    "graphiti-core>=0.3",
    "neo4j>=5.20",
    "litellm>=1.50",
    "instructor>=1.6",
    "pydantic>=2.7",
    "pydantic-settings>=2.4",
    "apscheduler>=3.10,<4.0",
    "python-dotenv>=1.0",
    "psycopg[binary]>=3.2",
]

[project.optional-dependencies]
# Embedder local para Archival Memory (Document QA y similares).
# `pip install -e ".[embeddings-local]"` o `uv sync --extra embeddings-local`.
embeddings-local = [
    "sentence-transformers>=3.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/memgpt"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra -q"
